best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -28,55 +28,55 @@
 <li><a href="#org706c080">1.2. 规范</a></li>
 </ul>
 </li>
-<li><a href="#org445dddf">2. .NET Core</a>
+<li><a href="#org2e46c72">2. 单机 到 CS 到 BS</a></li>
+<li><a href="#org43580bd">3. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
+<li><a href="#orga16c0aa">4. ASP.NET (Framework)</a></li>
+<li><a href="#orge20d128">5. ASP.NET Webform</a>
 <ul>
-<li><a href="#org00073ce">2.1. 跨平台开发</a></li>
-<li><a href="#org342f262">2.2. dotnet 命令行工具</a></li>
+<li><a href="#org4884bcb">5.1. aspx 文件</a></li>
+<li><a href="#org845bf47">5.2. Page 类</a></li>
+<li><a href="#orgeca96eb">5.3. Page 的生命周期</a></li>
+<li><a href="#org7495188">5.4. Page 的内置对象</a></li>
+<li><a href="#org0fe4293">5.5. 常用控件</a>
+<ul>
+<li><a href="#orgd97114a">5.5.1. GridView</a></li>
+<li><a href="#orge1c7ab0">5.5.2. Repeater</a></li>
 </ul>
 </li>
-<li><a href="#org2e46c72">3. 单机 到 CS 到 BS</a></li>
-<li><a href="#org43580bd">4. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
-<li><a href="#orga16c0aa">5. ASP.NET (Framework)</a></li>
-<li><a href="#orge20d128">6. ASP.NET Webform</a>
+<li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
+<li><a href="#orgf16bd8d">5.7. 其他</a>
 <ul>
-<li><a href="#org4884bcb">6.1. aspx 文件</a></li>
-<li><a href="#org845bf47">6.2. Page 类</a></li>
-<li><a href="#orgeca96eb">6.3. Page 的生命周期</a></li>
-<li><a href="#org7495188">6.4. Page 的内置对象</a></li>
-<li><a href="#org0fe4293">6.5. 常用控件</a>
-<ul>
-<li><a href="#orgd97114a">6.5.1. GridView</a></li>
-<li><a href="#orge1c7ab0">6.5.2. Repeater</a></li>
-</ul>
-</li>
-<li><a href="#org27e318c">6.6. 用户自定义控件</a></li>
-<li><a href="#orgf16bd8d">6.7. 其他</a>
-<ul>
-<li><a href="#org3ed183e">6.7.1. 路由 (Route)</a></li>
-<li><a href="#orgbb2d469">6.7.2. 捆绑 (Bundle)</a></li>
-<li><a href="#org6449b61">6.7.3. 网站 Logo (favicon.ico)</a></li>
-<li><a href="#orgd80584e">6.7.4. IHttpHandler.IsReusable</a></li>
+<li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
+<li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
+<li><a href="#org6449b61">5.7.3. 网站 Logo (favicon.ico)</a></li>
+<li><a href="#orgd80584e">5.7.4. IHttpHandler.IsReusable</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org1228952">7. ASP.NET MVC</a>
+<li><a href="#org1228952">6. ASP.NET MVC</a>
 <ul>
-<li><a href="#orgf24ab64">7.1. MVC</a></li>
-<li><a href="#orgc171ad9">7.2. Lifecycle</a></li>
-<li><a href="#org482ac02">7.3. Action</a></li>
-<li><a href="#org592c73d">7.4. Razor</a></li>
-<li><a href="#org946e302">7.5. Binding/Validation</a></li>
-<li><a href="#orgc3a6654">7.6. Filter</a></li>
+<li><a href="#orgf24ab64">6.1. MVC</a></li>
+<li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
+<li><a href="#org70140cc">6.3. Action</a></li>
+<li><a href="#org592c73d">6.4. Razor</a></li>
+<li><a href="#org946e302">6.5. Binding/Validation</a></li>
+<li><a href="#orgc3a6654">6.6. Filter</a></li>
 </ul>
 </li>
-<li><a href="#org9b9ef2f">8. ASP.NET WebAPI</a>
+<li><a href="#org9b9ef2f">7. ASP.NET WebAPI</a>
 <ul>
-<li><a href="#orge8f9cc3">8.1. JSON</a></li>
-<li><a href="#org680ebb4">8.2. WebApiConfig.cs</a></li>
-<li><a href="#orgaf1b1de">8.3. Router</a></li>
-<li><a href="#org70140cc">8.4. Action</a></li>
-<li><a href="#orgb8b8cf9">8.5. Help</a></li>
+<li><a href="#orge8f9cc3">7.1. JSON</a></li>
+<li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
+<li><a href="#orgaf1b1de">7.3. Router</a></li>
+<li><a href="#org3e6f0d2">7.4. Action</a></li>
+<li><a href="#orgb8b8cf9">7.5. Help</a></li>
+</ul>
+</li>
+<li><a href="#org445dddf">8. .NET Core</a>
+<ul>
+<li><a href="#org00073ce">8.1. 跨平台开发</a></li>
+<li><a href="#org342f262">8.2. dotnet 命令行工具</a></li>
 </ul>
 </li>
 </ul>
@@ -170,35 +170,9 @@
 </div>
 </section>
 
-<section id="outline-container-org445dddf" class="outline-2">
-<h2 id="org445dddf"><span class="section-number-2">2.</span> .NET Core</h2>
-<div class="outline-text-2" id="text-2">
-</div>
-<div id="outline-container-org00073ce" class="outline-3">
-<h3 id="org00073ce"><span class="section-number-3">2.1.</span> 跨平台开发</h3>
-<div class="outline-text-3" id="text-2-1">
-<ul class="org-ul">
-<li>推出了跨平台的 VSCode (lsp, Language Server Prototol)</li>
-<li>Windows 下面安装环境 (<a href="https://learn.microsoft.com/zh-cn/dotnet/core/install/windows?tabs=net60">https://learn.microsoft.com/zh-cn/dotnet/core/install/windows?tabs=net60</a>)</li>
-<li>NuGet (<a href="https://www.nuget.org/">https://www.nuget.org/</a>)</li>
-<li>dotnet 命令行工具</li>
-</ul>
-</div>
-</div>
-
-<div id="outline-container-org342f262" class="outline-3">
-<h3 id="org342f262"><span class="section-number-3">2.2.</span> dotnet 命令行工具</h3>
-<div class="outline-text-3" id="text-2-2">
-<p>
-预习
-</p>
-</div>
-</div>
-</section>
-
 <section id="outline-container-org2e46c72" class="outline-2">
-<h2 id="org2e46c72"><span class="section-number-2">3.</span> 单机 到 CS 到 BS</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="org2e46c72"><span class="section-number-2">2.</span> 单机 到 CS 到 BS</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 要注意，.NET 跟 C# 不是一样的概念：
 </p>
@@ -273,8 +247,8 @@ scala
 
 
 <section id="outline-container-org43580bd" class="outline-2">
-<h2 id="org43580bd"><span class="section-number-2">4.</span> ASP -&gt; ASP.NET -&gt; ASP.NET Core</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org43580bd"><span class="section-number-2">3.</span> ASP -&gt; ASP.NET -&gt; ASP.NET Core</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 大致分为三个阶段:
 </p>
@@ -287,8 +261,8 @@ scala
 </section>
 
 <section id="outline-container-orga16c0aa" class="outline-2">
-<h2 id="orga16c0aa"><span class="section-number-2">5.</span> ASP.NET (Framework)</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="orga16c0aa"><span class="section-number-2">4.</span> ASP.NET (Framework)</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Pipeline (管道/管线) 模型:
 </p>
@@ -330,12 +304,12 @@ Global.asax:
 
 
 <section id="outline-container-orge20d128" class="outline-2">
-<h2 id="orge20d128"><span class="section-number-2">6.</span> ASP.NET Webform</h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="orge20d128"><span class="section-number-2">5.</span> ASP.NET Webform</h2>
+<div class="outline-text-2" id="text-5">
 </div>
 <div id="outline-container-org4884bcb" class="outline-3">
-<h3 id="org4884bcb"><span class="section-number-3">6.1.</span> aspx 文件</h3>
-<div class="outline-text-3" id="text-6-1">
+<h3 id="org4884bcb"><span class="section-number-3">5.1.</span> aspx 文件</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法。
 </p>
@@ -523,8 +497,8 @@ Global.asax:
 </div>
 
 <div id="outline-container-org845bf47" class="outline-3">
-<h3 id="org845bf47"><span class="section-number-3">6.2.</span> Page 类</h3>
-<div class="outline-text-3" id="text-6-2">
+<h3 id="org845bf47"><span class="section-number-3">5.2.</span> Page 类</h3>
+<div class="outline-text-3" id="text-5-2">
 <p>
 你 (Browser) 请求 <a href="http://localhost:893232/Hello.aspx">http://localhost:893232/Hello.aspx</a> 到我 (IIS):
 </p>
@@ -541,10 +515,10 @@ Global.asax:
 </div>
 
 <div id="outline-container-orgeca96eb" class="outline-3">
-<h3 id="orgeca96eb"><span class="section-number-3">6.3.</span> Page 的生命周期</h3>
-<div class="outline-text-3" id="text-6-3">
+<h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
+<div class="outline-text-3" id="text-5-3">
 
-<figure id="org69ad7db">
+<figure id="org982d64b">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -700,8 +674,8 @@ Unload:
 </div>
 
 <div id="outline-container-org7495188" class="outline-3">
-<h3 id="org7495188"><span class="section-number-3">6.4.</span> Page 的内置对象</h3>
-<div class="outline-text-3" id="text-6-4">
+<h3 id="org7495188"><span class="section-number-3">5.4.</span> Page 的内置对象</h3>
+<div class="outline-text-3" id="text-5-4">
 <p>
 所谓的内置对象，是指在 Page 类中被初始化，从而在 aspx 中能直接使用的对象。
 </p>
@@ -734,7 +708,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgbcd233d">
+<pre class="example" id="orgd3b6068">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -791,7 +765,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgb081890">
+<pre class="example" id="org31fb4ad">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -852,12 +826,12 @@ Code Action Task:
 </div>
 
 <div id="outline-container-org0fe4293" class="outline-3">
-<h3 id="org0fe4293"><span class="section-number-3">6.5.</span> 常用控件</h3>
-<div class="outline-text-3" id="text-6-5">
+<h3 id="org0fe4293"><span class="section-number-3">5.5.</span> 常用控件</h3>
+<div class="outline-text-3" id="text-5-5">
 </div>
 <div id="outline-container-orgd97114a" class="outline-4">
-<h4 id="orgd97114a"><span class="section-number-4">6.5.1.</span> GridView</h4>
-<div class="outline-text-4" id="text-6-5-1">
+<h4 id="orgd97114a"><span class="section-number-4">5.5.1.</span> GridView</h4>
+<div class="outline-text-4" id="text-5-5-1">
 <p>
 <a href="https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8">https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8</a>
 </p>
@@ -922,8 +896,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-orge1c7ab0" class="outline-4">
-<h4 id="orge1c7ab0"><span class="section-number-4">6.5.2.</span> Repeater</h4>
-<div class="outline-text-4" id="text-6-5-2">
+<h4 id="orge1c7ab0"><span class="section-number-4">5.5.2.</span> Repeater</h4>
+<div class="outline-text-4" id="text-5-5-2">
 <p>
 专门进行数据迭代的一个控件，可以生成更高效更优雅的代码。
 </p>
@@ -960,8 +934,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-org27e318c" class="outline-3">
-<h3 id="org27e318c"><span class="section-number-3">6.6.</span> 用户自定义控件</h3>
-<div class="outline-text-3" id="text-6-6">
+<h3 id="org27e318c"><span class="section-number-3">5.6.</span> 用户自定义控件</h3>
+<div class="outline-text-3" id="text-5-6">
 <p>
 控件的主要目的，是复用。使用控件跟调用方法很类似，只不过方法的核心是逻辑，控件的核心是视图。
 </p>
@@ -1011,12 +985,12 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-orgf16bd8d" class="outline-3">
-<h3 id="orgf16bd8d"><span class="section-number-3">6.7.</span> 其他</h3>
-<div class="outline-text-3" id="text-6-7">
+<h3 id="orgf16bd8d"><span class="section-number-3">5.7.</span> 其他</h3>
+<div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
-<h4 id="org3ed183e"><span class="section-number-4">6.7.1.</span> 路由 (Route)</h4>
-<div class="outline-text-4" id="text-6-7-1">
+<h4 id="org3ed183e"><span class="section-number-4">5.7.1.</span> 路由 (Route)</h4>
+<div class="outline-text-4" id="text-5-7-1">
 <div class="org-src-container">
 <pre class="src src-csharp">RouteTable.Routes.<span style="color: #721045;">MapPageRoute</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"~/Students1.aspx"</span><span style="color: #000000;">)</span>;
 RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span style="color: #000000;">(</span>
@@ -1031,8 +1005,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-orgbb2d469" class="outline-4">
-<h4 id="orgbb2d469"><span class="section-number-4">6.7.2.</span> 捆绑 (Bundle)</h4>
-<div class="outline-text-4" id="text-6-7-2">
+<h4 id="orgbb2d469"><span class="section-number-4">5.7.2.</span> 捆绑 (Bundle)</h4>
+<div class="outline-text-4" id="text-5-7-2">
 <pre class="example">
 让 css/js (1) 变少 (2) 变小
 </pre>
@@ -1064,8 +1038,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-org6449b61" class="outline-4">
-<h4 id="org6449b61"><span class="section-number-4">6.7.3.</span> 网站 Logo (favicon.ico)</h4>
-<div class="outline-text-4" id="text-6-7-3">
+<h4 id="org6449b61"><span class="section-number-4">5.7.3.</span> 网站 Logo (favicon.ico)</h4>
+<div class="outline-text-4" id="text-5-7-3">
 <p>
 放在网站的根目录。
 </p>
@@ -1073,8 +1047,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-orgd80584e" class="outline-4">
-<h4 id="orgd80584e"><span class="section-number-4">6.7.4.</span> IHttpHandler.IsReusable</h4>
-<div class="outline-text-4" id="text-6-7-4">
+<h4 id="orgd80584e"><span class="section-number-4">5.7.4.</span> IHttpHandler.IsReusable</h4>
+<div class="outline-text-4" id="text-5-7-4">
 <p>
 重用。
 </p>
@@ -1084,12 +1058,12 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </section>
 
 <section id="outline-container-org1228952" class="outline-2">
-<h2 id="org1228952"><span class="section-number-2">7.</span> ASP.NET MVC</h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org1228952"><span class="section-number-2">6.</span> ASP.NET MVC</h2>
+<div class="outline-text-2" id="text-6">
 </div>
 <div id="outline-container-orgf24ab64" class="outline-3">
-<h3 id="orgf24ab64"><span class="section-number-3">7.1.</span> MVC</h3>
-<div class="outline-text-3" id="text-7-1">
+<h3 id="orgf24ab64"><span class="section-number-3">6.1.</span> MVC</h3>
+<div class="outline-text-3" id="text-6-1">
 <p>
 ASP.NET MVC:
 </p>
@@ -1115,10 +1089,10 @@ ASP.NET MVC:
 </div>
 
 <div id="outline-container-orgc171ad9" class="outline-3">
-<h3 id="orgc171ad9"><span class="section-number-3">7.2.</span> Lifecycle</h3>
-<div class="outline-text-3" id="text-7-2">
+<h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
+<div class="outline-text-3" id="text-6-2">
 
-<figure id="org6a02608">
+<figure id="orgc6c938e">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1197,9 +1171,9 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org482ac02" class="outline-3">
-<h3 id="org482ac02"><span class="section-number-3">7.3.</span> Action</h3>
-<div class="outline-text-3" id="text-7-3">
+<div id="outline-container-org70140cc" class="outline-3">
+<h3 id="org70140cc"><span class="section-number-3">6.3.</span> Action</h3>
+<div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
 <li>返回值是一个普通的 string/int 等或者是一个 ActionResult</li>
@@ -1229,8 +1203,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-org592c73d" class="outline-3">
-<h3 id="org592c73d"><span class="section-number-3">7.4.</span> Razor</h3>
-<div class="outline-text-3" id="text-7-4">
+<h3 id="org592c73d"><span class="section-number-3">6.4.</span> Razor</h3>
+<div class="outline-text-3" id="text-6-4">
 <ul class="org-ul">
 <li>Html 代码跟 CSharp 代码混编</li>
 <li>分解符: 遇到 @ 就是 csharp, 遇到 &lt; 就是 html 代码</li>
@@ -1242,8 +1216,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-org946e302" class="outline-3">
-<h3 id="org946e302"><span class="section-number-3">7.5.</span> Binding/Validation</h3>
-<div class="outline-text-3" id="text-7-5">
+<h3 id="org946e302"><span class="section-number-3">6.5.</span> Binding/Validation</h3>
+<div class="outline-text-3" id="text-6-5">
 <ul class="org-ul">
 <li>参数是自动绑定的，注意 [Bind] 的使用</li>
 <li>验证，推荐使用的是 Model 验证方式:
@@ -1291,8 +1265,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-orgc3a6654" class="outline-3">
-<h3 id="orgc3a6654"><span class="section-number-3">7.6.</span> Filter</h3>
-<div class="outline-text-3" id="text-7-6">
+<h3 id="orgc3a6654"><span class="section-number-3">6.6.</span> Filter</h3>
+<div class="outline-text-3" id="text-6-6">
 <p>
 接口、方法:
 </p>
@@ -1307,12 +1281,12 @@ ActionResult:
 </section>
 
 <section id="outline-container-org9b9ef2f" class="outline-2">
-<h2 id="org9b9ef2f"><span class="section-number-2">8.</span> ASP.NET WebAPI</h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="org9b9ef2f"><span class="section-number-2">7.</span> ASP.NET WebAPI</h2>
+<div class="outline-text-2" id="text-7">
 </div>
 <div id="outline-container-orge8f9cc3" class="outline-3">
-<h3 id="orge8f9cc3"><span class="section-number-3">8.1.</span> JSON</h3>
-<div class="outline-text-3" id="text-8-1">
+<h3 id="orge8f9cc3"><span class="section-number-3">7.1.</span> JSON</h3>
+<div class="outline-text-3" id="text-7-1">
 <p>
 JavaScript Object Notation.
 </p>
@@ -1380,8 +1354,8 @@ s2.<span style="color: #721045;">Add</span><span style="color: #000000;">(</span
 </div>
 
 <div id="outline-container-org680ebb4" class="outline-3">
-<h3 id="org680ebb4"><span class="section-number-3">8.2.</span> WebApiConfig.cs</h3>
-<div class="outline-text-3" id="text-8-2">
+<h3 id="org680ebb4"><span class="section-number-3">7.2.</span> WebApiConfig.cs</h3>
+<div class="outline-text-3" id="text-7-2">
 <p>
 可以在这里配置 WebAPI 相关的选项。
 </p>
@@ -1414,8 +1388,8 @@ config.Formatters.<span style="color: #721045;">Add</span><span style="color: #0
 </div>
 
 <div id="outline-container-orgaf1b1de" class="outline-3">
-<h3 id="orgaf1b1de"><span class="section-number-3">8.3.</span> Router</h3>
-<div class="outline-text-3" id="text-8-3">
+<h3 id="orgaf1b1de"><span class="section-number-3">7.3.</span> Router</h3>
+<div class="outline-text-3" id="text-7-3">
 <p>
 默认的路由规则是在 WebApiConfig.cs 中定义的:
 </p>
@@ -1436,9 +1410,9 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-org70140cc" class="outline-3">
-<h3 id="org70140cc"><span class="section-number-3">8.4.</span> Action</h3>
-<div class="outline-text-3" id="text-8-4">
+<div id="outline-container-org3e6f0d2" class="outline-3">
+<h3 id="org3e6f0d2"><span class="section-number-3">7.4.</span> Action</h3>
+<div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
 </p>
@@ -1509,8 +1483,8 @@ api/{controller}/{id}
 </div>
 
 <div id="outline-container-orgb8b8cf9" class="outline-3">
-<h3 id="orgb8b8cf9"><span class="section-number-3">8.5.</span> Help</h3>
-<div class="outline-text-3" id="text-8-5">
+<h3 id="orgb8b8cf9"><span class="section-number-3">7.5.</span> Help</h3>
+<div class="outline-text-3" id="text-7-5">
 <p>
 在 Areas 下面存在一个 HelpPage 的域，里面实现了展示当前所有 API 文档的功能。
 </p>
@@ -1521,6 +1495,32 @@ api/{controller}/{id}
 
 <p>
 <a href="https://learn.microsoft.com/zh-cn/aspnet/web-api/overview/getting-started-with-aspnet-web-api/creating-api-help-pages">https://learn.microsoft.com/zh-cn/aspnet/web-api/overview/getting-started-with-aspnet-web-api/creating-api-help-pages</a>
+</p>
+</div>
+</div>
+</section>
+
+<section id="outline-container-org445dddf" class="outline-2">
+<h2 id="org445dddf"><span class="section-number-2">8.</span> .NET Core</h2>
+<div class="outline-text-2" id="text-8">
+</div>
+<div id="outline-container-org00073ce" class="outline-3">
+<h3 id="org00073ce"><span class="section-number-3">8.1.</span> 跨平台开发</h3>
+<div class="outline-text-3" id="text-8-1">
+<ul class="org-ul">
+<li>推出了跨平台的 VSCode (lsp, Language Server Prototol)</li>
+<li>Windows 下面安装环境 (<a href="https://learn.microsoft.com/zh-cn/dotnet/core/install/windows?tabs=net60">https://learn.microsoft.com/zh-cn/dotnet/core/install/windows?tabs=net60</a>)</li>
+<li>NuGet (<a href="https://www.nuget.org/">https://www.nuget.org/</a>)</li>
+<li>dotnet 命令行工具</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org342f262" class="outline-3">
+<h3 id="org342f262"><span class="section-number-3">8.2.</span> dotnet 命令行工具</h3>
+<div class="outline-text-3" id="text-8-2">
+<p>
+预习
 </p>
 </div>
 </div>
